fixed spacing css line 65+

--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,11 @@ html {
 
 }
 
-.st0{fill:#673200;}
-.st1{fill:#FFAACA;}
-.st2{fill:#C65B00;}
+.st0 {
+  fill:#673200;}
+
+.st1 {
+  fill:#FFAACA;}
+
+.st2 {
+  fill:#C65B00;}
